--- a/labs/mitm/docker-compose.yml
+++ b/labs/mitm/docker-compose.yml
@@ -1,15 +1,24 @@
 services:
     attacker:
-        image: handsonsecurity/seed-ubuntu:large
+        build:
+          context: . # Use the current directory as the build context
+          dockerfile: Dockerfile
+        image: mitm-attacker # [foldername]-[servicename]
+        privileged: true
         container_name: attacker
         hostname: attacker
-        tty: true
         cap_add:
-                - ALL
-        privileged: true
+            - ALL
         volumes:
-                - ./volumes:/volumes
-        network_mode: host
+            - ./volumes:/volumes
+        sysctls:
+            # Necessary for transparent mode for mitmproxy
+            - net.ipv4.ip_forward=1
+            - net.ipv6.conf.all.forwarding=1
+            - net.ipv4.conf.all.send_redirects=0
+        networks:
+            - mitm
+        command: bash -c "tail -f /dev/null"
 
     server:
         image: tx6244/metasploitable2
@@ -17,10 +26,9 @@ services:
         hostname: server
         tty: true
         cap_add:
-                - ALL
+            - ALL
         networks:
-            net-10.10.0.0:
-                ipv4_address: 10.10.0.2
+            - mitm
         command: bash -c "
                       /etc/init.d/openbsd-inetd start  &&
                       /bin/services.sh &&
@@ -35,19 +43,14 @@ services:
         hostname: client
         tty: true
         cap_add:
-                - ALL
+            - ALL
         networks:
-            net-10.10.0.0:
-                ipv4_address: 10.10.0.3
+            - mitm
         command: bash -c "
                       /etc/init.d/openbsd-inetd start  &&
                       tail -f /dev/null
                  "
                   
 networks:
-    net-10.10.0.0:
-        name: net-10.10.0.0
-        ipam:
-            config:
-                - subnet: 10.10.0.0/24
+    mitm:
 
