--- a/demos/mitm/docker-compose.yml
+++ b/demos/mitm/docker-compose.yml
@@ -8,6 +8,9 @@ services:
             - ./server_files:/var/www
         networks:
             - mitm
+        ports:
+          - "80:80"
+        
 
     client:
         image: jlesage/firefox
@@ -23,7 +26,7 @@ services:
         build:
           context: . # Use the current directory as the build context
           dockerfile: Dockerfile
-        image: mitm-attacker # [foldername]-[servicename]
+        image: mitm-attacker # [foldername]-[servicename] 
         privileged: true
         container_name: eve
         hostname: eve
@@ -39,6 +42,8 @@ services:
         networks:
             - mitm
         command: bash -c "tail -f /dev/null"
+
 networks:
     mitm:
+        driver: bridge
 
